--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	</script>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="KDD Cup 2022 Workshop: The primary objective of this competition is to build new ranking strategies and, simultaneously, identify interesting categories of results (i.e., substitutes) that can be used to improve the customer experience when searching for products." />
-        <meta name="author" content="Nurendra Choudhary" />
-        <title>KDD Cup 2024 Workshop: A Multi-task Online Shopping Challenge for LLMs</title>
+        <meta name="description" content="KDD Cup 2024 Workshop: The primary objective of this competition is to build unified solutions based on large language models to the multi-task problem of online shopping, and to provide interactive shopping experiences to customers.  " />
+        <meta name="author" content="Yilun Jin" />
+        <title>KDD Cup 2024 Workshop: A Multi-task Online Shopping Challenge for Large Language Models</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"  type='text/css'>
@@ -44,8 +44,8 @@
         <header class="text-white" style="background:transparent url('assets/opener23.png') no-repeat center center /cover; opacity: 0.7;">
             <div class="container px-4 text-center" 
             style="background: rgba(0, 0, 0, 0.8); font-size:medium; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif">
-                <h1 class="fw-bolder" style="color:ivory;">KDD Cup 2023 Workshop:</h1>
-                <h2 class="fw-bolder">Multilingual Session Recommendation Challenge</h2>
+                <h1 class="fw-bolder" style="color:ivory;">KDD Cup 2024 Workshop:</h1>
+                <h2 class="fw-bolder">A Multi-task Online Shopping Challenge for Large Language Models</h2>
                 <p>Held in conjunction with <a style="color:#e77725;" href="https://kdd.org/kdd2023/">KDD'23</a>
                     Aug 6, 2023 - Aug 10, 2023, Long Beach, CA, USA</p>
             </div>
