--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             style="background: rgba(0, 0, 0, 0.8); font-size:medium; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif">
                 <h1 class="fw-bolder" style="color:ivory;">KDD Cup 2024 Workshop:</h1>
                 <h2 class="fw-bolder">A Multi-task Online Shopping Challenge for Large Language Models</h2>
-                <p>Held in conjunction with <a style="color:#e77725;" href="https://kdd.org/kdd2023/">KDD'23</a>
-                    Aug 6, 2023 - Aug 10, 2023, Long Beach, CA, USA</p>
+                <p>Held in conjunction with <a style="color:#e77725;" href="https://kdd2024.kdd.org/">KDD'24</a>
+                    Aug 25, 2023 - Aug 29, 2024, Barcelona, Spain</p>
             </div>
         </header>
         <!-- Intro section-->
