--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav nav-pills ms-auto" style="font-size:medium; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif">
                         <li class="nav-item"><a class="nav-link" style="color:white;" href="#intro" >INTRODUCTION</a></li>&nbsp;&nbsp;
-                        <li class="nav-item"><a class="nav-link" style="color:white;" href="#program">PROGRAM</a></li>&nbsp;&nbsp;
-                        <li class="nav-item"><a class="nav-link" style="color:white;" href="#papers">ACCEPTED PAPERS</a></li>&nbsp;&nbsp;
+                        <!--<li class="nav-item"><a class="nav-link" style="color:white;" href="#program">PROGRAM</a></li>&nbsp;&nbsp;-->
+                        <!--<li class="nav-item"><a class="nav-link" style="color:white;" href="#papers">ACCEPTED PAPERS</a></li>&nbsp;&nbsp;-->
                         <li class="nav-item"><a class="nav-link" style="color:white;" href="#submission">SUBMISSION GUIDELINES</a></li>&nbsp;&nbsp;
                         <li class="nav-item"><a class="nav-link" style="color:white;" href="#dates">DATES</a></li>&nbsp;&nbsp;
                         <li class="nav-item"><a class="nav-link" style="color:white;" href="#organizers">ORGANIZERS</a></li>&nbsp;&nbsp;
-                        <li class="nav-item"><a class="nav-link" style="color:white;" href="#data">DATA</a></li>&nbsp;&nbsp;
+                        <!--<li class="nav-item"><a class="nav-link" style="color:white;" href="#data">DATA</a></li>&nbsp;&nbsp;-->
                     </ul>
                 </div>
             </div>
@@ -58,12 +58,13 @@
                         <br>
                         <h2 style="text-align: center;">INTRODUCTION</h2>
                         <p style="text-align: justify;">
-                        The objective of this workshop is to discuss the winning submissions of the 
-                            KDDCup 2023 Challenge on Multilingual Session Recommendation Challenge. In this challenge, we introduce the “Amazon Multilingual Multi-locale Session Dataset (Amazon-M2)”, 
+                        <!--The objective of this workshop is to discuss the winning submissions of the 
+                            KDDCup 2024 Challenge on Multilingual Session Recommendation Challenge. In this challenge, we introduce the “Amazon Multilingual Multi-locale Session Dataset (Amazon-M2)”, 
                             a collection of anonymized customer sessions containing products from six different locales: English, German, Japanese, French, Italian, and Spanish, 
                             published with the aim of encouraging the development of multilingual recommendation systems, which can enhance personalization and understanding of global trends and preferences.  
                             For each session, the dataset provides a list of product IDs (Amazon ASIN numbers) interacted by the current user, together with the additional product features.
-                            More details of this challenge are available here: <a href="https://www.aicrowd.com/challenges/amazon-kdd-cup-23-multilingual-recommendation-challenge">[Challenge Link]</a>, <a href="https://arxiv.org/abs/2307.09688">[Dataset Paper Link]</a> and <a href="https://openreview.net/group?id=KDD.org/2023/Workshop/Cup">[OpenReview Link]</a>.
+                            More details of this challenge are available here: <a href="https://www.aicrowd.com/challenges/amazon-kdd-cup-23-multilingual-recommendation-challenge">[Challenge Link]</a>, <a href="https://arxiv.org/abs/2307.09688">[Dataset Paper Link]</a> and <a href="https://openreview.net/group?id=KDD.org/2023/Workshop/Cup">[OpenReview Link]</a>.-->
+			The objective of this workshop is to discuss the winning solutions of the Amazon KDD Cup 2024: A Multi-task Online Shopping Challenge for LLMs. 
                         <!-- </p> -->
                         <br>
                       <!--
@@ -83,6 +84,7 @@
             </div>
         </section>
         <!-- Program section-->
+	
         <section class="bg-light" style="padding-top: 4%; padding-bottom: 4%;">
             <div class="container px-4" id="program">
                 <div class="row gx-4 justify-content-center">
