--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav nav-pills ms-auto" style="font-size:medium; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif">
                         <li class="nav-item"><a class="nav-link" style="color:white;" href="#intro" >INTRODUCTION</a></li>&nbsp;&nbsp;
-                        <!--<li class="nav-item"><a class="nav-link" style="color:white;" href="#program">PROGRAM</a></li>&nbsp;&nbsp;-->
-                        <!--<li class="nav-item"><a class="nav-link" style="color:white;" href="#papers">ACCEPTED PAPERS</a></li>&nbsp;&nbsp;-->
+                        <li class="nav-item"><a class="nav-link" style="color:white;" href="#program">PROGRAM</a></li>&nbsp;&nbsp;
+                        <li class="nav-item"><a class="nav-link" style="color:white;" href="#papers">ACCEPTED PAPERS</a></li>&nbsp;&nbsp;
                         <li class="nav-item"><a class="nav-link" style="color:white;" href="#submission">SUBMISSION GUIDELINES</a></li>&nbsp;&nbsp;
                         <li class="nav-item"><a class="nav-link" style="color:white;" href="#dates">DATES</a></li>&nbsp;&nbsp;
                         <li class="nav-item"><a class="nav-link" style="color:white;" href="#organizers">ORGANIZERS</a></li>&nbsp;&nbsp;
-                        <!--<li class="nav-item"><a class="nav-link" style="color:white;" href="#data">DATA</a></li>&nbsp;&nbsp;-->
+                        <li class="nav-item"><a class="nav-link" style="color:white;" href="#data">DATA</a></li>&nbsp;&nbsp;
                     </ul>
                 </div>
             </div>
@@ -67,17 +67,6 @@
 			The objective of this workshop is to discuss the winning solutions of the Amazon KDD Cup 2024: A Multi-task Online Shopping Challenge for LLMs. 
                         <!-- </p> -->
                         <br>
-                      <!--
-                        <h3>Objective and Tasks</h3>
-                        The primary objective of this competition is to build new session recommender system which understands the 
-                        shopping intentions and improves the shopping experimence of worldwide customers from different locales.
-                        The three different tasks for this KDD Cup competition using the Shopping Session Dataset are:<br/>
-                        <ol>
-                            <li><b>Next Product Recommendation:</b> Given a session data and the attributes of each product, the goal of this task is to predict the next product that a customer is likely to engage with. The test set for Task 1 comprises data from popular locales, i.e., English, German, and Japanese locales. </li>
-                            <li><b>Next Product Recommendation for Underrepresented Languages/Locales:</b> The goal of this task is similar to Task1 while the test set is constructed from the underepresented locales, i.e., French, Italian, and Spanish.</li>
-                            <li><b>Next Product Title Generation:</b> Given a session data and the attributes of each product, the goal of this task is to predict the title of the next product that a customer will engage with. Unlike Tasks 1 and 2, which focus on recommending existing products, predicting new or "cold-start" products presents a unique challenge.</li>
-                        </ol>
-                      -->
                         </p>
                     </div>
                 </div>
@@ -138,8 +127,6 @@
 <br>
 <br> <b>Title:</b>  Data and AI Markets for E-Commerce 
 <br> <b>Abstract:</b>  In the ever-evolving landscape of e-commerce, seamless collaboration between multiple parties is essential to offer comprehensive and end-to-end services transcending supplier, provider, and market sector boundaries. A critical aspect of such cooperation lies in the sharing of data and AI models among these parties. However, data and AI model sharing pose significant challenges. In this enlightening talk, I will unveil insightful strategies and blueprints for establishing data and AI markets tailored to the e-commerce domain. These markets will facilitate efficient data and AI model sharing, discovery, and integration. I will delve into the latest technical advancements while addressing the potential hurdles and opportunities. 
-<!--<b>Abstract:</b> In the ever-evolving landscape of e-commerce, seamless collaboration between multiple parties is essential to offer comprehensive and end-to-end services transcending supplier, provider, and market sector boundaries. A critical aspect of such cooperation lies in the sharing of data and AI models among these parties. However, data and AI model sharing pose significant challenges. In this enlightening talk, I will unveil insightful strategies and blueprints for establishing
-data and AI markets tailored to the e-commerce domain. These markets will facilitate efficient data and AI model sharing, discovery, and integration. I will delve into the latest technical advancements while addressing the potential hurdles and opportunities. -->
                                     </ul>
                                   </p>
                                 </div>
@@ -199,14 +186,6 @@ data and AI markets tailored to the e-commerce domain. These markets will facili
                                     </ul>
                                   </p>
                                 </div>
-                                <!--
-                                <a class="list-group-item list-group-item-action">
-                                  <div class="d-flex w-100 justify-content-between">
-                                    <h5 class="mb-1"><span><i class="fa-solid fa-mug-hot" style="color:#0275d8;"></i></span>&nbsp;&nbsp;Coffee Break</h5>
-                                    <h5><span><i class="fas fa-clock" style="color:#0275d8;"></i></span>&nbsp;&nbsp;3:00-3:30 PM</h5>
-                                  </div>
-                                </a>
-                                -->
                                 <div class="list-group-item list-group-item-action">
                                     <div class="d-flex w-100 justify-content-between">
                                       <h5 class="mb-1"><span><i class="fa-solid fa-signs-post" style="color:#0275d8;"></i></span>&nbsp;&nbsp; Poster Session</h5>
@@ -218,43 +197,10 @@ data and AI markets tailored to the e-commerce domain. These markets will facili
                                       <li><b>Posters:</b> <a href="https://github.com/kddcup23/kddcup23.github.io/tree/main/posters" style="color: black;">Check here</a>  </li>
 
                                       </li>
-                                      <!--
-                                        <li>A Stacking and Transfer Learning with Diverse Similarity For Building Multilingual Session-based Recommendation Systems </li>
-                                        <li>A Hybrid Approach of Statistics and Embeddingsor Multilingual and Multi-Locale Recommendation</li>
-                                        <li>Practical Content-aware Session-based Recommendation: Deep Retrieve then Shallow Rank.</li>
-                                        -->
                                     </ul>
                                   </p>
                                   </div>
-                                <!--
-                                <a class="list-group-item list-group-item-action">
-                                    <div class="d-flex w-100 justify-content-between">
-                                      <h5 class="mb-1"><span><i class="fas fa-bars-progress" style="color:#0275d8;"></i></span>&nbsp;&nbsp;All Tasks: Interesting Approaches</h5>
-                                      <h5><span><i class="fas fa-clock" style="color:#0275d8;"></i></span>&nbsp;&nbsp;4:00-4:50 PM</h5>
-                                    </div>
-                                -->
-                                    <!--
-                                    <p class="mb-1">
-                                        <ul>
-                                            <li>TFKD Solution for KDD Cup 2022 Amazon Product Search</li>
-                                            <li>A Boring-yet-effective Approach for the Product Ranking Task of the Amazon KDD Cup 2022</li>
-                                            <li>CMB AI Lab at KDD Cup 2022 ESCI Task2 and Task3: A Domain Adapted PLM with Context Enhancement for Query-Product Classification</li>
-                                            <li>A Multi-model Fusion Approach for Product Classification and Product Substitute Identification on Shopping Queries Data</li>
-                                            <li>KDD Cup 2022 Multiclass Product Classification: Team MetaSoul Solution</li>
-                                            <li>Predicting Query-Item Relationship using Adversarial Training and Robust Modeling Techniques</li>
-                                        </ul>
-                                     </p>
-                                     -->
                                 </a>
-                                <!--
-                                <a class="list-group-item list-group-item-action">
-                                    <div class="d-flex w-100 justify-content-between">
-                                      <h5 class="mb-1"><span><i class="fas fa-book" style="color:#0275d8;"></i></span>&nbsp;&nbsp;Closing</h5>
-                                      <h5><span><i class="fas fa-clock" style="color:#0275d8;"></i></span>&nbsp;&nbsp;4:50-5:00 PM</h5>
-                                    </div>
-                                    <p class="mb-1">Concluding remarks by organizers.</p>
-                                </a>
-                                -->
                             </div>             
                 </div>
             </div>
