--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
             </div>
         </section>
         <!-- Program section-->
-	
+	    TBD
+	<!--
         <section class="bg-light" style="padding-top: 4%; padding-bottom: 4%;">
             <div class="container px-4" id="program">
                 <div class="row gx-4 justify-content-center">
@@ -93,9 +94,6 @@
                                     Introduction by organizers.&nbsp;&nbsp;
                                     <br><b>Moderator:</b> <a href="http://cse.msu.edu/~jinwei2/" style="color: black;">Dr. Wei Jin</a>, Assistant Professor at Emory University 
                                     <br><b>Speaker:</b> <a href="https://www.tangxianfeng.net/" style="color: black;"> Dr. Xianfeng Tang</a>, Senior Applied Scientist at Amazon 
-                                    <!--
-                                    <button type="button" class="btn btn-primary btn-sm" onclick="window.open('slides/KDDCup.pdf')">Slides</button>
-                                    -->
                                   </p>
                                 </div>
                                 <div class="list-group-item list-group-item-action">
@@ -142,7 +140,6 @@
                                       <br> <b>Title</b>: <a href="https://openreview.net/attachment?id=J3wj55kK5t&name=pdf" style="color: black;">Winning Amazon KDD Cup'23</a>  
                                         <br><b>Time: </b> 2:50-3:25PM 
                                       </li>
-                                        <!-- <li>Short presentations by other winners (15 mins)</li> -->
                                     </ul>
                                   </p>
                                     <p class="mb-1">
@@ -178,11 +175,6 @@
                                       <br><b>Title:</b> <a href="https://openreview.net/attachment?id=6MdSsLgDei&name=pdf" style="color: black;"> Practical Content-aware Session-based Recommendation: Deep Retrieve then Shallow Rank </a> 
                                       <br><b>Time: </b> 4:25-4:35PM 
                                       </li>                                                                            
-                                      <!--
-                                        <li>A Stacking and Transfer Learning with Diverse Similarity For Building Multilingual Session-based Recommendation Systems </li>
-                                        <li>A Hybrid Approach of Statistics and Embeddingsor Multilingual and Multi-Locale Recommendation</li>
-                                        <li>Practical Content-aware Session-based Recommendation: Deep Retrieve then Shallow Rank.</li>
-                                        -->
                                     </ul>
                                   </p>
                                 </div>
@@ -205,7 +197,7 @@
                 </div>
             </div>
         </section>
-
+	-->
         <!-- Accepted papers section-->
         <section style="padding-top: 4%; padding-bottom: 4%;">
             <div class="container px-4" id="papers">
