--- a/index.html
+++ b/index.html
@@ -73,17 +73,19 @@
             </div>
         </section>
         <!-- Program section-->
-	    TBD
-	<!--
+	    
+	
         <section class="bg-light" style="padding-top: 4%; padding-bottom: 4%;">
             <div class="container px-4" id="program">
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
                         <br>
                         <h2 style="text-align: center;">SCHEDULE</h2>
-                        <p style="text-align: center;">August 9, 2023, 1:00PM–5:00PM (PST), Long Beach, CA, USA.</p>
-                        <p style="text-align: center;">204, Long Beach Convention &amp; Entertainment Center</p>
+                        <p style="text-align: center;">August 28, 2024, 11:00AM–16:30PM (CEST), Barcelona, Spain.</p>
+                        <p style="text-align: center;">Centre de Convencions Internacional de Barcelona</p>
                         <p style="text-align: center;">This will be a hybrid session. Zoom link will be provided later.</p>
+			<p style="text-align: center;">Detailed Program TBD. </p>
+			<!--
                             <div class="list-group list-group-flush">
                                 <div class="list-group-item list-group-item-action">
                                   <div class="d-flex w-100 justify-content-between">
