--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                                   </div>
                                   <p class="mb-1">
                                     Introduction by organizers.&nbsp;&nbsp;
-                                    <br><b>Moderator:</b> <a href="http://cse.msu.edu/~jinwei2/" style="color: black;">Dr. Wei Jin</a>, Assistant Professor at Emory University 
-                                    <br><b>Speaker:</b> <a href="https://www.tangxianfeng.net/" style="color: black;"> Dr. Xianfeng Tang</a>, Senior Applied Scientist at Amazon 
+                                    <br><b>Moderator:</b> <a href="https://kl4805.github.io/" style="color: black;">Yilun Jin</a>, Ph.D. Student at Hong Kong University of Science and Technology
+                                    <br><b>Speaker:</b> <a href="https://hsqmlzno1.github.io/" style="color: black;"> Dr. Zheng Li</a>, Senior Applied Scientist at Amazon 
                                   </p>
                                 </div>
                                 <div class="list-group-item list-group-item-action">
