--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                 <div class="list-group-item list-group-item-action">
                                   <div class="d-flex w-100 justify-content-between">
                                     <h5 class="mb-1"><span><i class="fas fa-book-open" style="color:#0275d8;"></i></span>&nbsp;&nbsp;Opening</h5>
-                                    <h5><span><i class="fas fa-clock" style="color:#0275d8;"></i></span>&nbsp;&nbsp;1:00-1:30 PM</h5>
+                                    <h5><span><i class="fas fa-clock" style="color:#0275d8;"></i></span>&nbsp;&nbsp;11:00-11:30 AM</h5>
                                   </div>
                                   <p class="mb-1">
                                     Introduction by organizers.&nbsp;&nbsp;
