--- a/index.html
+++ b/index.html
@@ -101,16 +101,17 @@
                                 <div class="list-group-item list-group-item-action">
                                   <div class="d-flex w-100 justify-content-between">
                                     <h5 class="mb-1"><span><i class="fas fa-bars-progress" style="color:#0275d8;"></i></span>&nbsp;&nbsp; Invited Speaker</h5>
-                                    <h5><span><i class="fas fa-clock" style="color:#0275d8;"></i></span>&nbsp;&nbsp;1:30-2:10 PM</h5>
+                                    <h5><span><i class="fas fa-clock" style="color:#0275d8;"></i></span>&nbsp;&nbsp;11:30 AM-12:10 PM</h5>
                                   </div>
                                   <p class="mb-1">
                                     <ul>
-<img src="images/haixun.jpg" alt="Description of image" style="float: left; margin-right: 10px; width: 180px; height: 230px;"> 
+					    
+<!--<img src="images/haixun.jpg" alt="Description of image" style="float: left; margin-right: 10px; width: 180px; height: 230px;"> -->
                                          
-<a href="https://haixun.github.io/" style="color: black;"><b>Dr. Haixun Wang</b></a>
-                                        <br>VP Engineering, Algorithms &amp; Distinguished Scientist at Instacart 
-                                        <br><br><b>Title:</b> LLMs and Generative AI for E-Commerce 
-                                        <br><b>Abstract:</b>  In this talk, I will discuss the current status and challenges of product search. In particular, I will highlight the significant effort it takes to create a high-quality product search engine using classical information retrieval methods. Then, I will discuss how recent advances in arge pre-trained language models, may change the status quo. While embedding-based retrieval has the potential to improve classical information retrieval methods, creating a machine learning-based, end-to-end system for general-purpose web search is still extremely difficult. Nevertheless, I will argue that product search for e-commerce may prove to be an area where LLMs can create the first disruption to classical information retrieval systems. 
+<a href="https://amazon-kddcup24.github.io/" style="color: black;"><b>TBD</b></a>
+                                        <br>TBD
+                                        <br><br><b>Title:</b> TBD
+                                        <br><b>Abstract:</b>  TBD<!--In this talk, I will discuss the current status and challenges of product search. In particular, I will highlight the significant effort it takes to create a high-quality product search engine using classical information retrieval methods. Then, I will discuss how recent advances in arge pre-trained language models, may change the status quo. While embedding-based retrieval has the potential to improve classical information retrieval methods, creating a machine learning-based, end-to-end system for general-purpose web search is still extremely difficult. Nevertheless, I will argue that product search for e-commerce may prove to be an area where LLMs can create the first disruption to classical information retrieval systems.--> 
                                     </ul>
                                   </p>
                                 </div>
