--- a/index.html
+++ b/index.html
@@ -118,16 +118,16 @@
                                 <div class="list-group-item list-group-item-action">
                                   <div class="d-flex w-100 justify-content-between">
                                     <h5 class="mb-1"><span><i class="fas fa-bars-progress" style="color:#0275d8;"></i></span>&nbsp;&nbsp; Invited Speaker</h5>
-                                    <h5><span><i class="fas fa-clock" style="color:#0275d8;"></i></span>&nbsp;&nbsp;2:10-2:50 PM</h5>
+                                    <h5><span><i class="fas fa-clock" style="color:#0275d8;"></i></span>&nbsp;&nbsp;12:10-12:50 PM</h5>
                                   </div>
                                   <p class="mb-1">
                                     <ul>
-<img src="images/jian.jpeg" alt="Description of image" style="float: left; margin-right: 10px; width: 200px; height: 200px;"> 
-<a href="https://sites.duke.edu/jianpei/" style="color: black;"><b>Dr. Jian Pei </b></a>
-<br> Arthur S. Pearse Distinguished Professor at Duke University 
+<!--<img src="images/jian.jpeg" alt="Description of image" style="float: left; margin-right: 10px; width: 200px; height: 200px;"> -->
+<a href="https://amazon-kddcup24.github.io/" style="color: black;"><b>TBD </b></a>
+<br> TBD
 <br>
-<br> <b>Title:</b>  Data and AI Markets for E-Commerce 
-<br> <b>Abstract:</b>  In the ever-evolving landscape of e-commerce, seamless collaboration between multiple parties is essential to offer comprehensive and end-to-end services transcending supplier, provider, and market sector boundaries. A critical aspect of such cooperation lies in the sharing of data and AI models among these parties. However, data and AI model sharing pose significant challenges. In this enlightening talk, I will unveil insightful strategies and blueprints for establishing data and AI markets tailored to the e-commerce domain. These markets will facilitate efficient data and AI model sharing, discovery, and integration. I will delve into the latest technical advancements while addressing the potential hurdles and opportunities. 
+<br> <b>Title:</b> TBD
+<br> <b>Abstract:</b>  TBD<!--In the ever-evolving landscape of e-commerce, seamless collaboration between multiple parties is essential to offer comprehensive and end-to-end services transcending supplier, provider, and market sector boundaries. A critical aspect of such cooperation lies in the sharing of data and AI models among these parties. However, data and AI model sharing pose significant challenges. In this enlightening talk, I will unveil insightful strategies and blueprints for establishing data and AI markets tailored to the e-commerce domain. These markets will facilitate efficient data and AI model sharing, discovery, and integration. I will delve into the latest technical advancements while addressing the potential hurdles and opportunities. -->
                                     </ul>
                                   </p>
                                 </div>
