--- a/index.html
+++ b/index.html
@@ -131,6 +131,16 @@
                                     </ul>
                                   </p>
                                 </div>
+                                <div class="list-group-item list-group-item-action">
+                                  <div class="d-flex w-100 justify-content-between">
+                                    <h5 class="mb-1"><span><i class="fas fa-bars-progress" style="color:#0275d8;"></i></span>&nbsp;&nbsp; Lunch Break</h5>
+                                    <h5><span><i class="fas fa-clock" style="color:#0275d8;"></i></span>&nbsp;&nbsp;12:50-14:00 PM</h5>
+                                  </div>
+                                  <p class="mb-1">
+                                    <ul>
+                                    </ul>
+                                  </p>
+                                </div>
 
                                 <div class="list-group-item list-group-item-action">
                                   <div class="d-flex w-100 justify-content-between">
