--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                 <div class="list-group-item list-group-item-action">
                                   <div class="d-flex w-100 justify-content-between">
                                     <h5 class="mb-1"><span><i class="fas fa-book-open" style="color:#0275d8;"></i></span>&nbsp;&nbsp;Opening</h5>
-                                    <h5><span><i class="fas fa-clock" style="color:#0275d8;"></i></span>&nbsp;&nbsp;11:00-11:30 AM</h5>
+                                    <h5><span><i class="fas fa-clock" style="color:#0275d8;"></i></span>&nbsp;&nbsp;11:00-11:30</h5>
                                   </div>
                                   <p class="mb-1">
                                     Introduction by organizers.&nbsp;&nbsp;
@@ -101,7 +101,7 @@
                                 <div class="list-group-item list-group-item-action">
                                   <div class="d-flex w-100 justify-content-between">
                                     <h5 class="mb-1"><span><i class="fas fa-bars-progress" style="color:#0275d8;"></i></span>&nbsp;&nbsp; Invited Speaker</h5>
-                                    <h5><span><i class="fas fa-clock" style="color:#0275d8;"></i></span>&nbsp;&nbsp;11:30 AM-12:10 PM</h5>
+                                    <h5><span><i class="fas fa-clock" style="color:#0275d8;"></i></span>&nbsp;&nbsp;11:30-12:10</h5>
                                   </div>
                                   <p class="mb-1">
                                     <ul>
@@ -118,7 +118,7 @@
                                 <div class="list-group-item list-group-item-action">
                                   <div class="d-flex w-100 justify-content-between">
                                     <h5 class="mb-1"><span><i class="fas fa-bars-progress" style="color:#0275d8;"></i></span>&nbsp;&nbsp; Invited Speaker</h5>
-                                    <h5><span><i class="fas fa-clock" style="color:#0275d8;"></i></span>&nbsp;&nbsp;12:10-12:50 PM</h5>
+                                    <h5><span><i class="fas fa-clock" style="color:#0275d8;"></i></span>&nbsp;&nbsp;12:10-12:50</h5>
                                   </div>
                                   <p class="mb-1">
                                     <ul>
@@ -134,7 +134,7 @@
                                 <div class="list-group-item list-group-item-action">
                                   <div class="d-flex w-100 justify-content-between">
                                     <h5 class="mb-1"><span><i class="fas fa-bars-progress" style="color:#0275d8;"></i></span>&nbsp;&nbsp; Lunch Break</h5>
-                                    <h5><span><i class="fas fa-clock" style="color:#0275d8;"></i></span>&nbsp;&nbsp;12:50-14:00 PM</h5>
+                                    <h5><span><i class="fas fa-clock" style="color:#0275d8;"></i></span>&nbsp;&nbsp;12:50-14:00</h5>
                                   </div>
                                   <p class="mb-1">
                                     <ul>
@@ -145,48 +145,48 @@
                                 <div class="list-group-item list-group-item-action">
                                   <div class="d-flex w-100 justify-content-between">
                                     <h5 class="mb-1"><span><i class="fas fa-bars-progress" style="color:#0275d8;"></i></span>&nbsp;&nbsp; Oral Presentations</h5>
-                                    <h5><span><i class="fas fa-clock" style="color:#0275d8;"></i></span>&nbsp;&nbsp;2:50-4:35 PM</h5>
+                                    <h5><span><i class="fas fa-clock" style="color:#0275d8;"></i></span>&nbsp;&nbsp;14:00-16:00</h5>
                                   </div>
                                   <p class="mb-1">
                                     <ul>
-                                      <li> <b>Team: </b> NVIDIA-Merlin 
+                                      <li> <b>Team: </b> TBD
                                       <br> <b>Title</b>: <a href="https://openreview.net/attachment?id=J3wj55kK5t&name=pdf" style="color: black;">Winning Amazon KDD Cup'23</a>  
-                                        <br><b>Time: </b> 2:50-3:25PM 
+                                        <br><b>Time: </b> TBD
                                       </li>
                                     </ul>
                                   </p>
                                     <p class="mb-1">
                                         <ul>
-                                          <li><b>Team:</b> gpt_bot   
+                                          <li><b>Team:</b> TBD  
                                           <br><b>Title:</b> <a href="https://openreview.net/attachment?id=ccNBG7UOlr&name=pdf" style="color: black;"> A Hybrid Approach of Statistics and Embeddings for Multilingual and Multi-Locale Recommendation </a>
-                                          <br><b>Time:</b> 3:25-3:40PM   
+                                          <br><b>Time:</b> TBD  
                                           </li>
                                         </ul>
                                     </p>
 
                                     <p class="mb-1">
                                         <ul>
-                                          <li><b>Team:</b> We Bare Bears  
+                                          <li><b>Team:</b> TBD
                                           <br><b>Title:</b> <a href="https://openreview.net/pdf?id=K4h7LbK6SK" style="color: black;">Statistical and Generative Models with subtitle Extraction for  Next Product Title Generation </a> 
-                                          <br><b>Time:</b> 3:40-3:55PM   
+                                          <br><b>Time:</b> TBD
                                           </li>
                                         </ul>
                                     </p>
                                   <p class="mb-1">
                                     <ul>
-                                      <li><b>Team:</b> MGTV-REC
+                                      <li><b>Team:</b> TBD
                                       <br><b>Title:</b> <a href="https://openreview.net/attachment?id=fHvoKhDyMA&name=pdf" style="color: black;">A Stacking and Transfer Learning with Diverse Similarity For Building Multilingual Session-based Recommendation Systems </a> 
-                                      <br><b>Time: </b> 3:55-4:15PM 
+                                      <br><b>Time: </b> TBD
                                       </li>
                                       <br>
-                                      <li><b>Team:</b> ustc-gobble
+                                      <li><b>Team:</b> TBD
                                       <br><b>Title:</b> <a href="https://openreview.net/attachment?id=umFKIJkgeS&name=pdf" style="color: black;"> Co-visitation Meets Token Alignment for Next Product Title Generation</a>
-                                      <br><b>Time: </b> 4:15-4:25PM 
+                                      <br><b>Time: </b> TBD
                                       </li>
                                       <br>
-                                      <li><b>Team:</b> unirec
+                                      <li><b>Team:</b> TBD
                                       <br><b>Title:</b> <a href="https://openreview.net/attachment?id=6MdSsLgDei&name=pdf" style="color: black;"> Practical Content-aware Session-based Recommendation: Deep Retrieve then Shallow Rank </a> 
-                                      <br><b>Time: </b> 4:25-4:35PM 
+                                      <br><b>Time: </b> TBD
                                       </li>                                                                            
                                     </ul>
                                   </p>
