--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                   <p class="mb-1">
                                     <ul>
                                       <li> <b>Team: </b> TBD
-                                      <br> <b>Title</b>: <a href="https://openreview.net/attachment?id=J3wj55kK5t&name=pdf" style="color: black;">Winning Amazon KDD Cup'23</a>  
+                                      <br> <b>Title</b>: <a href="https://amazon-kddcup24.github.io" style="color: black;">TBD</a>  
                                         <br><b>Time: </b> TBD
                                       </li>
                                     </ul>
@@ -158,7 +158,7 @@
                                     <p class="mb-1">
                                         <ul>
                                           <li><b>Team:</b> TBD  
-                                          <br><b>Title:</b> <a href="https://openreview.net/attachment?id=ccNBG7UOlr&name=pdf" style="color: black;"> A Hybrid Approach of Statistics and Embeddings for Multilingual and Multi-Locale Recommendation </a>
+                                          <br><b>Title:</b> <a href="https://amazon-kddcup24.github.io" style="color: black;"> TBD </a>
                                           <br><b>Time:</b> TBD  
                                           </li>
                                         </ul>
@@ -167,7 +167,7 @@
                                     <p class="mb-1">
                                         <ul>
                                           <li><b>Team:</b> TBD
-                                          <br><b>Title:</b> <a href="https://openreview.net/pdf?id=K4h7LbK6SK" style="color: black;">Statistical and Generative Models with subtitle Extraction for  Next Product Title Generation </a> 
+                                          <br><b>Title:</b> <a href="https://amazon-kddcup24.github.io" style="color: black;">TBD </a> 
                                           <br><b>Time:</b> TBD
                                           </li>
                                         </ul>
@@ -175,17 +175,17 @@
                                   <p class="mb-1">
                                     <ul>
                                       <li><b>Team:</b> TBD
-                                      <br><b>Title:</b> <a href="https://openreview.net/attachment?id=fHvoKhDyMA&name=pdf" style="color: black;">A Stacking and Transfer Learning with Diverse Similarity For Building Multilingual Session-based Recommendation Systems </a> 
+                                      <br><b>Title:</b> <a href="https://amazon-kddcup24.github.io" style="color: black;">TBD </a> 
                                       <br><b>Time: </b> TBD
                                       </li>
                                       <br>
                                       <li><b>Team:</b> TBD
-                                      <br><b>Title:</b> <a href="https://openreview.net/attachment?id=umFKIJkgeS&name=pdf" style="color: black;"> Co-visitation Meets Token Alignment for Next Product Title Generation</a>
+                                      <br><b>Title:</b> <a href="https://amazon-kddcup24.github.io" style="color: black;"> TBD</a>
                                       <br><b>Time: </b> TBD
                                       </li>
                                       <br>
                                       <li><b>Team:</b> TBD
-                                      <br><b>Title:</b> <a href="https://openreview.net/attachment?id=6MdSsLgDei&name=pdf" style="color: black;"> Practical Content-aware Session-based Recommendation: Deep Retrieve then Shallow Rank </a> 
+                                      <br><b>Title:</b> <a href="https://amazon-kddcup24.github.io" style="color: black;"> TBD </a> 
                                       <br><b>Time: </b> TBD
                                       </li>                                                                            
                                     </ul>
@@ -194,7 +194,7 @@
                                 <div class="list-group-item list-group-item-action">
                                     <div class="d-flex w-100 justify-content-between">
                                       <h5 class="mb-1"><span><i class="fa-solid fa-signs-post" style="color:#0275d8;"></i></span>&nbsp;&nbsp; Poster Session</h5>
-                                      <h5><span><i class="fas fa-clock" style="color:#0275d8;"></i></span>&nbsp;&nbsp;4:35-5:00 PM</h5>
+                                      <h5><span><i class="fas fa-clock" style="color:#0275d8;"></i></span>&nbsp;&nbsp;16:00-16:30 PM</h5>
                                     </div>
                                   <p class="mb-1">
                                     <ul>
