--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                                 <div class="list-group-item list-group-item-action">
                                     <div class="d-flex w-100 justify-content-between">
                                       <h5 class="mb-1"><span><i class="fa-solid fa-signs-post" style="color:#0275d8;"></i></span>&nbsp;&nbsp; Poster Session</h5>
-                                      <h5><span><i class="fas fa-clock" style="color:#0275d8;"></i></span>&nbsp;&nbsp;16:00-16:30 PM</h5>
+                                      <h5><span><i class="fas fa-clock" style="color:#0275d8;"></i></span>&nbsp;&nbsp;16:00-16:30</h5>
                                     </div>
                                   <p class="mb-1">
                                     <ul>
@@ -224,13 +224,13 @@
                         <a href="https://openreview.net/group?id=KDD.org/2023/Workshop/Cup">https://openreview.net/group?id=KDD.org/2023/Workshop/Cup</a> 
                           
                             <a class="list-group-item list-group-item-action">
-                                <h6>Nvidia: Winning Amazon KDD Cup'23</h6>
+                                <h6>TBD</h6>
                                 &nbsp;<span class="badge alert-success"><i class="fas fa-trophy"></i> Task 1</span>
                                 &nbsp;<span class="badge alert-danger"><i class="fas fa-trophy"></i> Task 2</span> 
                                 &nbsp;<span class="badge alert-warning"><i class="fas fa-trophy"></i> Task 3</span><br>                                
-                                Authors: Chris Deotte, Kazuki onodera, Jean-Francois Puget, Benedikt Schifferer, Gilberto Titericz                              
+                                Authors: TBD                             
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                    <a href="https://openreview.net/pdf?id=J3wj55kK5t" class="btn btn-secondary" role="button" target="_blank">Paper</a>
+                                    <a href="https://amazon-kddcup24.github.io/" class="btn btn-secondary" role="button" target="_blank">Paper</a>
                                 </div>
                             </a>      <br> 
                             <a class="list-group-item list-group-item-action ">
