--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
                         <h2 style="text-align: center;">ACCEPTED PAPERS</h2>
                         <div class="list-group list-group-flush">
 				
-                          In total, we have accepted 15 submissions including 6 oral presentations and 8 poster presentationss. The accepted submission are publicly available at OpenReview page:  
-                        <a href="https://openreview.net/group?id=KDD.org/2023/Workshop/Cup">https://openreview.net/group?id=KDD.org/2023/Workshop/Cup</a> 
+                          In total, we have accepted [TBD] submissions including [TBD] oral presentations and [TBD] poster presentationss. The accepted submission are publicly available at OpenReview page:  
+                        <a href="https://openreview.net/group?id=KDD.org/2024/Workshop/Amazon_KDD_Cup">https://openreview.net/group?id=KDD.org/2023/Workshop/Amazon_KDD_Cup</a> 
                           
                             <a class="list-group-item list-group-item-action">
                                 <h6>TBD</h6>
