--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                         <div class="list-group list-group-flush">
 				
                           In total, we have accepted [TBD] submissions including [TBD] oral presentations and [TBD] poster presentationss. The accepted submission are publicly available at OpenReview page:  
-                        <a href="https://openreview.net/group?id=KDD.org/2024/Workshop/Amazon_KDD_Cup">https://openreview.net/group?id=KDD.org/2023/Workshop/Amazon_KDD_Cup</a> 
+                        <a href="https://openreview.net/group?id=KDD.org/2024/Workshop/Amazon_KDD_Cup">https://openreview.net/group?id=KDD.org/2024/Workshop/Amazon_KDD_Cup</a> 
                           
                             <a class="list-group-item list-group-item-action">
                                 <h6>TBD</h6>
@@ -234,44 +234,44 @@
                                 </div>
                             </a>      <br> 
                             <a class="list-group-item list-group-item-action ">
-                                <h6>A Stacking and Transfer Learning with Diverse Similarity For Building Multilingual Session-based Recommendation Systems</h6>
+                                <h6>TBD</h6>
                                 &nbsp;<span class="badge alert-danger"><i class="fas fa-trophy"></i> Task 1</span> 
                                 &nbsp;<span class="badge alert-danger"><i class="fas fa-trophy"></i> Task 2</span> <br>
-                                Authors: Jiangwei Luo, Zhouzhou He, Ye Tang, Wentao Tang, Li Cheng                              
+                                Authors: TBD                           
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                    <a href="https://openreview.net/pdf?id=fHvoKhDyMA" class="btn btn-secondary" role="button" target="_blank">Paper</a>
+                                    <a href="https://amazon-kddcup24.github.io/" class="btn btn-secondary" role="button" target="_blank">Paper</a>
                                 </div>
                             </a>        <br>
                             <a class="list-group-item list-group-item-action ">
-                                <h6>A Hybrid Approach of Statistics and Embeddings for Multilingual and Multi-Locale Recommendation</h6>
+                                <h6>A TBD</h6>
                                 &nbsp;<span class="badge alert-warning"><i class="fas fa-trophy"></i> Task 2</span><br>                                
-                                Authors: Weijia Zhang, Jin Zhan, Zhongshan Huang, Lu Wang, Qiang Wang
+                                Authors: TBD
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                    <a href="https://openreview.net/pdf?id=ccNBG7UOlr" class="btn btn-secondary" role="button" target="_blank">Paper</a>
+                                    <a href="https://amazon-kddcup24.github.io/" class="btn btn-secondary" role="button" target="_blank">Paper</a>
                                 </div>
                             </a>          <br>                                                
                             <a class="list-group-item list-group-item-action ">
-                                <h6>Statistical and Generative Models with Subtitle Extraction for Next Product Title Generation</h6>
+                                <h6>TBD</h6>
                                 &nbsp;<span class="badge alert-warning"><i class="fas fa-trophy"></i> Task 3</span><br>                                
-                                Authors: Honghee Lee, Youngjae Chang, Kyuri Choi, Jongwuk Lee, Youngjoong Ko.                                                             
+                                Authors: TBD.                                                             
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                    <a href="https://openreview.net/pdf?id=K4h7LbK6SK" class="btn btn-secondary" role="button" target="_blank">Paper</a>
+                                    <a href="https://amazon-kddcup24.github.io/" class="btn btn-secondary" role="button" target="_blank">Paper</a>
                                 </div>
                             </a>      <br>
                             <a class="list-group-item list-group-item-action ">
-                                <h6>Practical Content-aware Session-based Recommendation: Deep Retrieve then Shallow Rank</h6>
+                                <h6>TBD</h6>
                                 &nbsp;<span class="badge alert-success"><i class="fas fa-trophy"></i> Task 1</span><br>
-                                Authors: Yuxuan Lei, Xiaolong Chen, Defu Lian, Peiyan Zhang, Jianxun Lian, Chaozhuo Li, Xing Xie.                              
+                                Authors: TBD.                              
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                    <a href="https://openreview.net/pdf?id=6MdSsLgDei" class="btn btn-secondary" role="button" target="_blank">Paper</a>
+                                    <a href="https://amazon-kddcup24.github.io/" class="btn btn-secondary" role="button" target="_blank">Paper</a>
                                 </div>
                             </a>          <br>                 
                             <a class="list-group-item list-group-item-action ">
-                                <h6>Co-visitation Meets Token Alignment for Next Product Title Generation</h6>
+                                <h6>TBD</h6>
                                 &nbsp;<span class="badge alert-warning"><i class="fas fa-trophy"></i> Task 3</span><br>                                
-                                Authors: Chenwang Wu, Leyan Deng, Zhihao Zhu, Defu Lian                      
+                                Authors: TBD            
                                 <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                    <a href="https://openreview.net/pdf?id=umFKIJkgeS" class="btn btn-secondary" role="button" target="_blank">Paper</a>
+                                    <a href="https://amazon-kddcup24.github.io/" class="btn btn-secondary" role="button" target="_blank">Paper</a>
                                 </div>
                             </a>      <br>                     
                             <a class="list-group-item list-group-item-action ">
